--- a/athens_map_index.html
+++ b/athens_map_index.html
@@ -1,7 +1,9 @@
-
-
-
-
+<!--
+  Interactive Map of Athens
+  This code displays a full-page Mapbox map. 
+  Users can click on the map to drop a red marker
+  and see the latitude and longitude of that location.
+-->
 <!DOCTYPE html>
 <html>
 <!--meta-information /resources the page needs (CSS, JS, title...)--> 
