--- a/athens_map_index.html
+++ b/athens_map_index.html
@@ -14,7 +14,7 @@
   <!-- Title -->
   <title>Pick a Location in Athens</title>
   
- <!-- We need thee page to be responsive on mobile devices --> setting zoom behavior -->
+ <!-- We need thee page to be responsive on mobile devices -->
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
  <!-- Include the Mapbox GL JavaScript library from a Content Delivery Network (CDN)-->
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
